[FIX] mail: emoji in discuss text is slightly bigger
Follow-up of https://github.com/odoo/odoo/pull/202766

PR above fixed an issue with some emojis being represented
as 4 emojis rather than 1. The change consisted in using
non-colored emoji fonts.

However this change negatively affected font "text-emoji":
emojis were no longer size-adjusted to 121%, thus emojis became
too small.

This commit fixes the issue by removing completely the "text-emoji"
font family and instead the size adjustment of emojis is made thanks
to `wrapEmojisInTitle`, which has been renamed to `decorateEmojis`
to take into account the new use with font-size adjustment.

This emoji side adjustment is desired in chat bubble preview and
messaging menu item, so related fields have been adapted to
use `decorateEmojis`, including the inline textual preview of
message.

closes odoo/odoo#204266

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -155,7 +155,6 @@
 }
 
 .o-mail-Composer-input {
-    font-family: "text-emoji", $font-family-base;
     max-height: Min(400px, 60vh);
     resize: none;
 
